Set up index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,110 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE htmlPUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="en" xmlns="https://www.w3.org/1999/xhtml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <!-- fixes email not full width ios gmail -->
+    <meta name="x-apple-disable-message-reformatting" />
     <title>Patagonia Transactional Email</title>
+     <!--[if mso]>
+      <noscript>
+        <xml>
+          <o:OfficeDocumentSettings>
+            <o:PixelsPerInch>96</o:PixelsPerInch>
+          </o:OfficeDocumentSettings>
+        </xml>
+      </noscript>
+    <![endif]-->
+
+     <!-- Google Fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+     <!-- Global Style -->
+<style type="text/css">
+    body {
+    height: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    width: 100% !important;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    text-rendering: optimizelegibility;
+    -webkit-font-smoothing: antialiased;
+     word-spacing: normal;
+    }
+
+    table, td, div, h1, h2, h3, h4, p {font-family: 'Ubuntu', Helvetica, Arial, sans-serif;}
+
+    table, td {
+      border-collapse: collapse !important;
+      mso-table-lspace: 0pt;
+      mso-table-rspace: 0pt;
+      -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+    }
+
+    table {
+        border-spacing: 0;
+    }
+
+    table td {
+        border-collapse: collapse;
+    }
+
+    td {
+        padding: 0;
+    }
+
+    img {
+      display: block;
+      border: 0;
+      height: auto;
+      line-height: 100%;
+      max-width: 100%;
+      outline: none;
+      text-decoration: none;
+      font-size: 13px;
+    }
+</style>
+
+<!-- Media Queries -->
+<style type="text/css">
+    /* Mobile */
+    @media only screen and (max-width: 600px){
+       .container {
+           width: 100%;
+       }
+    }
+
+    @media only screen and (max-width: 480px){
+       .container {
+           width: 100%;
+       }
+    }
+</style>
 </head>
-<body>
+<body style="width: 100%; table-layout: fixed; margin: 0 auto; padding: 0;">
+    <!-- ==========>> Email Start <<==========  -->
+    <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+        <tr>
+            <td align="center" style="padding: 0; padding-top: 20px; padding-bottom: 60px;" valign="top">
+                <!-- ==========>> Email Container <<==========  -->
+                <table class="container" width="600px" align="center" border="0" cellpadding="0" cellspacing="0">
+                    <tr>
+                        <td></td>
+                    </tr>
+                </table>
+                <!-- ==========>> /Email Container <<==========  -->
+            </td>
+        </tr>
+    </table>
+    <!-- ==========>> /Email End <<==========  -->
     
 </body>
 </html>
+
+
+heb
