Add email content

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 
      <!-- Google Fonts -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
 
-     <!-- Global Style -->
+<!-- Global Style -->
 <style type="text/css">
+
+    @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap');
+
     body {
     height: 100% !important;
     margin: 0 !important;
@@ -36,7 +39,7 @@
      word-spacing: normal;
     }
 
-    table, td, div, h1, h2, h3, h4, p {font-family: 'Ubuntu', Helvetica, Arial, sans-serif;}
+    table, td, div, h1, h2, h3, h4, p {font-family: 'Nunito Sans', Helvetica, Arial, sans-serif;}
 
     table, td {
       border-collapse: collapse !important;
@@ -92,10 +95,94 @@
         <tr>
             <td align="center" style="padding: 0; padding-top: 20px; padding-bottom: 60px;" valign="top">
                 <!-- ==========>> Email Container <<==========  -->
-                <table class="container" width="600px" align="center" border="0" cellpadding="0" cellspacing="0">
+                <table class="container" width="600px" align="center" border="0" cellpadding="0" cellspacing="0" border-spacing="0" style="width: 100%; max-width: 600px; background-color: #ffffff">
+                    <!-- ==========>> Start of Patagonia Logo <<==========  -->
                     <tr>
-                        <td></td>
+                        <td align="center" valign="top" style="padding: 25px 0 25px 0;">
+                            <table role="presentation" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                <tr>
+                                    <td align="center" style="padding: 0; width: 100%; max-width: 600px; font-size: 0;" valign="top">
+                                        <a href="#" style="text-decoration: none;">
+                                            <img src="img/patagonia-logo.jpeg" alt="Patagonia Logo" style="width: 230px;">
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
                     </tr>
+                    <!-- ==========>> End of Patagonia Logo <<==========  -->
+
+                    <!-- ==========>> Start of Hero Image <<==========  -->
+                    <tr>
+                        <td align="center" valign="top" style="padding: 0;">
+                            <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                <tr>
+                                    <td align="center" valign="top" style="padding: 0; width: 100%; max-width: 600px; font-size: 0;">
+                                        <a href="#" style="text-decoration: none;">
+                                            <img src="img/hero-image.jpeg" alt="Hero Image" style="width: 600px;">
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <!-- ==========>> End of Hero Image <<==========  -->
+
+                    <!-- ==========>> Start of Thank You <<==========  -->
+                    <tr>
+                        <td class="thank-you padding" align="center" valign="top" style="padding: 0;">
+                            <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                <tr>
+                                    <td align="center" valign="top" style="padding: 60px 0 40px 0">
+                                        <p style="line-height: 60px; color: #000000; font-size: 50px; font-weight: 800;">
+                                            Thank you for <br>
+                                            shopping <br>
+                                            at Patagonia
+                                        </p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="order" align="center" valign="top" style="padding: 0 95px 60px 95px">
+                                        <p  style="line-height: 26px; color: #000000; font-size: 16px; font-weight: 600;">
+                                            Your order is being processed. As soon as iit ships, we'll send you a shipping confirmation email with tracking information.
+                                        </p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="order" align="center" valign="top" style="padding: 0 95px 60px 95px">
+                                        <p  style="line-height: 26px; color: #000000; font-size: 16px; font-weight: 600;">
+                                            We encourage you to go to your order status page and sign up text updates as there may be unexpected delays.
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <!-- ==========>> End of Thank You <<==========  -->
+
+                    <!-- ==========>> Start of Sign Up Box <<==========  -->
+                    <tr>
+                        <td class="sign-up" align="center" valign="top" style="padding: 10px 10px 10px 10px; background-color: #F5F5F5;">
+                            <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                <tr>
+                                    <td class="padding" align="center" valign="top" style="padding: 10px 10px 10px 10px">
+                                        <table role="presentation" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                            <tr>
+                                                <td align="center" valign="top" style="padding: 20px 20px 20px 20px">
+                                                    <p style="line-height: 22px; color: #000000; font-size: 15px; font-weight: 800;">
+                                                        Get text updates about your delivery. <a href="#" style="color: #000000;"><span style="text-decoration: underline;">Sign Up</span></a>
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+
+                    <!-- ==========>> End of Sign Up Box <<==========  -->
+
                 </table>
                 <!-- ==========>> /Email Container <<==========  -->
             </td>
@@ -107,4 +194,3 @@
 </html>
 
 
-heb
