--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <meta name="format-detection" content="telephone=no, date=no, address=no, email=no, url=no">
     <!-- fixes email not full width ios gmail -->
     <meta name="x-apple-disable-message-reformatting" />
+    <!-- control dark mode preferences -->
+    <meta name="color-scheme" content="light dark">
+    <meta name="supported-color-schemes" content="light dark">
+
+    
     <title>Patagonia Transactional Email</title>
      <!--[if mso]>
       <noscript>
@@ -16,6 +22,13 @@
         </xml>
       </noscript>
     <![endif]-->
+
+    <style>
+        :root {
+          color-scheme: light dark;
+          supported-color-schemes: light dark;
+        }
+    </style>
 
      <!-- Google Fonts -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -89,105 +102,102 @@
     }
 </style>
 </head>
-<body style="width: 100%; table-layout: fixed; margin: 0 auto; padding: 0;">
+<body class="body" xml:lang="en" style="width: 100%; table-layout: fixed; margin: 0 auto; padding: 0;">
     <!-- ==========>> Email Start <<==========  -->
-    <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
-        <tr>
-            <td align="center" style="padding: 0; padding-top: 20px; padding-bottom: 60px;" valign="top">
-                <!-- ==========>> Email Container <<==========  -->
-                <table class="container" width="600px" align="center" border="0" cellpadding="0" cellspacing="0" border-spacing="0" style="width: 100%; max-width: 600px; background-color: #ffffff">
-                    <!-- ==========>> Start of Patagonia Logo <<==========  -->
-                    <tr>
-                        <td align="center" valign="top" style="padding: 25px 0 25px 0;">
-                            <table role="presentation" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
-                                <tr>
-                                    <td align="center" style="padding: 0; width: 100%; max-width: 600px; font-size: 0;" valign="top">
-                                        <a href="#" style="text-decoration: none;">
-                                            <img src="img/patagonia-logo.jpeg" alt="Patagonia Logo" style="width: 230px;">
-                                        </a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                    <!-- ==========>> End of Patagonia Logo <<==========  -->
-
-                    <!-- ==========>> Start of Hero Image <<==========  -->
-                    <tr>
-                        <td align="center" valign="top" style="padding: 0;">
-                            <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
-                                <tr>
-                                    <td align="center" valign="top" style="padding: 0; width: 100%; max-width: 600px; font-size: 0;">
-                                        <a href="#" style="text-decoration: none;">
-                                            <img src="img/hero-image.jpeg" alt="Hero Image" style="width: 600px;">
-                                        </a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                    <!-- ==========>> End of Hero Image <<==========  -->
-
-                    <!-- ==========>> Start of Thank You <<==========  -->
-                    <tr>
-                        <td class="thank-you padding" align="center" valign="top" style="padding: 0;">
-                            <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
-                                <tr>
-                                    <td align="center" valign="top" style="padding: 60px 0 40px 0">
-                                        <p style="line-height: 60px; color: #000000; font-size: 50px; font-weight: 800;">
-                                            Thank you for <br>
-                                            shopping <br>
-                                            at Patagonia
-                                        </p>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="order" align="center" valign="top" style="padding: 0 95px 60px 95px">
-                                        <p  style="line-height: 26px; color: #000000; font-size: 16px; font-weight: 600;">
-                                            Your order is being processed. As soon as iit ships, we'll send you a shipping confirmation email with tracking information.
-                                        </p>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="order" align="center" valign="top" style="padding: 0 95px 60px 95px">
-                                        <p  style="line-height: 26px; color: #000000; font-size: 16px; font-weight: 600;">
-                                            We encourage you to go to your order status page and sign up text updates as there may be unexpected delays.
-                                        </p>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                    <!-- ==========>> End of Thank You <<==========  -->
-
-                    <!-- ==========>> Start of Sign Up Box <<==========  -->
-                    <tr>
-                        <td class="sign-up" align="center" valign="top" style="padding: 10px 10px 10px 10px; background-color: #F5F5F5;">
-                            <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
-                                <tr>
-                                    <td class="padding" align="center" valign="top" style="padding: 10px 10px 10px 10px">
-                                        <table role="presentation" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
-                                            <tr>
-                                                <td align="center" valign="top" style="padding: 20px 20px 20px 20px">
-                                                    <p style="line-height: 22px; color: #000000; font-size: 15px; font-weight: 800;">
-                                                        Get text updates about your delivery. <a href="#" style="color: #000000;"><span style="text-decoration: underline;">Sign Up</span></a>
-                                                    </p>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-
-                    <!-- ==========>> End of Sign Up Box <<==========  -->
-
-                </table>
-                <!-- ==========>> /Email Container <<==========  -->
-            </td>
-        </tr>
-    </table>
+    <div role="article" aria-roledescription="email" aria-label="email name" lang="en" dir="ltr" style="font-size: medium; font-size: max(16px, 1rem);">
+        <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+            <tr>
+                <td align="center" style="padding: 0; padding-top: 20px; padding-bottom: 60px;" valign="top">
+                    <!-- ==========>> Email Container <<==========  -->
+                    <table class="container" width="600px" align="center" border="0" cellpadding="0" cellspacing="0" border-spacing="0" style="width: 100%; max-width: 600px; background-color: #ffffff">
+                        <!-- ==========>> Start of Patagonia Logo <<==========  -->
+                        <tr>
+                            <td align="center" valign="top" style="padding: 25px 0 25px 0;">
+                                <table role="presentation" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td align="center" style="padding: 0; width: 100%; max-width: 600px; font-size: 0;" valign="top">
+                                            <a href="#" style="text-decoration: none;">
+                                                <img src="img/patagonia-logo.jpeg" alt="Patagonia Logo" style="width: 230px;">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Patagonia Logo <<==========  -->
+                        <!-- ==========>> Start of Hero Image <<==========  -->
+                        <tr>
+                            <td align="center" valign="top" style="padding: 0;">
+                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 0; width: 100%; max-width: 600px; font-size: 0;">
+                                            <a href="#" style="text-decoration: none;">
+                                                <img src="img/hero-image.jpeg" alt="Hero Image" style="width: 600px;">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Hero Image <<==========  -->
+                        <!-- ==========>> Start of Thank You <<==========  -->
+                        <tr>
+                            <td class="thank-you padding" align="center" valign="top" style="padding: 0;">
+                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 60px 0 40px 0">
+                                            <p style="line-height: 60px; color: #000000; font-size: 50px; font-weight: 800;">
+                                                Thank you for <br>
+                                                shopping <br>
+                                                at Patagonia
+                                            </p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="order" align="center" valign="top" style="padding: 0 95px 60px 95px">
+                                            <p  style="line-height: 26px; color: #000000; font-size: 16px; font-weight: 600;">
+                                                Your order is being processed. As soon as iit ships, we'll send you a shipping confirmation email with tracking information.
+                                            </p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="order" align="center" valign="top" style="padding: 0 95px 60px 95px">
+                                            <p  style="line-height: 26px; color: #000000; font-size: 16px; font-weight: 600;">
+                                                We encourage you to go to your order status page and sign up text updates as there may be unexpected delays.
+                                            </p>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Thank You <<==========  -->
+                        <!-- ==========>> Start of Sign Up Box <<==========  -->
+                        <tr>
+                            <td class="sign-up" align="center" valign="top" style="padding: 10px 10px 10px 10px; background-color: #F5F5F5;">
+                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td class="padding" align="center" valign="top" style="padding: 10px 10px 10px 10px">
+                                            <table role="presentation" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                                <tr>
+                                                    <td align="center" valign="top" style="padding: 20px 20px 20px 20px">
+                                                        <p style="line-height: 22px; color: #000000; font-size: 15px; font-weight: 800;">
+                                                            Get text updates about your delivery. <a href="#" style="color: #000000;"><span style="text-decoration: underline;">Sign Up</span></a>
+                                                        </p>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Sign Up Box <<==========  -->
+                    </table>
+                    <!-- ==========>> /Email Container <<==========  -->
+                </td>
+            </tr>
+        </table>
+    </div>
     <!-- ==========>> /Email End <<==========  -->
     
 </body>
