Add price break-down section

--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
                                                             <!-- /Blank Space -->
                                                             <!-- Shipping Address -->
                                                             <tr>
-                                                                <td class="bottom-row">
+                                                                <td class="bottom-row" align="center" valign="top" style="padding: 0">
                                                                     <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
                                                                         <tr>
-                                                                            <td>
+                                                                            <td align="center" valign="top" style="padding: 0"> 
                                                                                 <p style="color: #333333; font-size: 15px;line-height: 22px; text-align: left; font-weight: 800; margin: 0;">Shipping Address</p>
                                                                                 <p style="color: #333333; font-size: 15px;line-height: 22px; text-align: left; font-weight: 600; margin: 0;">
                                                                                     Smiles Davis
@@ -273,10 +273,10 @@
                                                         <table role="presentation" width="33.33%" align="left" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
                                                             <!-- Order Date Row -->
                                                             <tr>
-                                                                <td>
+                                                                <td align="center" valign="top" style="padding: 0">
                                                                     <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
                                                                         <tr>
-                                                                            <td>
+                                                                            <td align="center" valign="top" style="padding: 0">
                                                                                 <p style="color: #333333; font-size: 15px;line-height: 22px; text-align: left; font-weight: bold; margin: 0;">Order Date</p>
                                                                                 <p style="color: #EF4923; font-size: 15px;line-height: 22px; text-align: left; font-weight: normal; margin: 0;">
                                                                                     <span>May 12, 2020</span>
@@ -302,10 +302,10 @@
                                                             <!-- /Blank Space -->
                                                             <!-- Billing Address -->
                                                             <tr>
-                                                                <td class="bottom-row">
+                                                                <td class="bottom-row" align="center" valign="top" style="padding: 0">
                                                                     <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
                                                                         <tr>
-                                                                            <td>
+                                                                            <td align="center" valign="top" style="padding: 0">
                                                                                 <p style="color: #333333; font-size: 15px;line-height: 22px; text-align: left; font-weight: 800; margin: 0;">Billing Address</p>
                                                                                 <p style="color: #333333; font-size: 15px;line-height: 22px; text-align: left; font-weight: 600; margin: 0;">
                                                                                     Smiles Davis
@@ -329,7 +329,7 @@
                                                                 <td>
                                                                     <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
                                                                         <tr>
-                                                                            <td>
+                                                                            <td align="center" valign="top" style="padding: 0">
                                                                                 <p style="color: #333333; font-size: 15px;line-height: 22px; text-align: left; font-weight: bold; margin: 0;">
                                                                                     Shipping Method</p>
                                                                                 <p style="color: #EF4923; font-size: 15px;line-height: 22px; text-align: left; font-weight: normal; margin: 0;">
@@ -360,7 +360,7 @@
                                                                 <td class="bottom-row">
                                                                     <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
                                                                         <tr>
-                                                                            <td>
+                                                                            <td align="center" valign="top" style="padding: 0">
                                                                                 <p style="color: #333333; font-size: 15px;line-height: 22px; text-align: left; font-weight: 800; margin: 0;">Payment Method</p>
                                                                                 <p style="color: #333333; font-size: 15px;line-height: 22px; text-align: left; font-weight: 600; margin: 0;">
                                                                                     Paypal
@@ -399,8 +399,91 @@
                         <!-- /Blank Space -->
                         
                         <!-- ==========>> Start of Item <<==========  -->
+                        <tr>
+                            <td class="padding" align="center" valign="top" style="padding: 20px 0 40px 0">
+                                <table class="wrapper" role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 0">
+                                            <!-- Image Column -->
+                                            <table role="presentation" width="100%" align="left" border="0" border-spacing="0" cellpadding="0" cellspacing="0" width="220px" style="width: 220px;">
+                                                <tr>
+                                                    <td align="center" valign="top" style="padding: 0; font-size: 0;">
+                                                        <img src="img/patagonia-product_shorts.jpeg" alt="Shorts" style="width: 100%;max-width: 100%; height: auto;">
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <!-- /Image Column -->
 
+                                            <!-- Break-Down Column -->
+                                            <table role="presentation" width="100%" align="left" border="0" border-spacing="0" cellpadding="0" cellspacing="0" width="280px" style="width: 280px;">
+                                                <tr>
+                                                    <td align="center" valign="top" style="padding: 40px 0 0 0;">
+                                                        <h4 style="color: #000000; font-size: 18px; line-height: 24px; text-align: left; margin: 0;">M's Baggies™ Naturals</h4>
+                                                        <p style="color: #666666; font-size: 16px; line-height: 22px; text-align: left; margin: 0;">#58056</p>
+                                                        <p style="color: #000000; font-size: 16px; line-height: 22px; text-align: left; margin: 0; font-weight: 600;">
+                                                            Color: CYML <br>
+                                                            Size: M <br>
+                                                            Qty: 1
+                                                        </p>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <!-- /Break-Down Column -->
+
+                                             <!-- Price Column -->
+                                             <table role="presentation" width="100%" align="left" border="0" border-spacing="0" cellpadding="0" cellspacing="0" width="100px" style="width: 100px;">
+                                                <tr>
+                                                    <td align="center" valign="top" style="padding: 40px 20px 0 0;">
+                                                        <h4 style="color: #000000; font-size: 18px; line-height: 24px; text-align: right; margin: 0;">$59.00</h4>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <!-- /Price Column -->
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                         <!-- ==========>> End of Item <<==========  -->
+
+                        <!-- ==========>> Start of Order Summary <<==========  -->
+                        <tr>
+                            <td align="center" valign="top" style="padding: 0;">
+                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-top: 1px solid #cccccc;">
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 40px 0 0 0;">
+                                           <table role="presentation" width="500px" align="left" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="width: 500px">
+                                                <tr>
+                                                    <td align="center" valign="top" style="padding: 0; padding-left: 220px;">
+                                                        <p style="color: #000000; font-size: 16px; line-height: 22px; text-align: left; margin: 0; font-weight: 600; text-align: left;">
+                                                            Subtotal<br>
+                                                            Shipping<br>
+                                                            Estimated Tax <br>
+                                                            <span style="font-weight: 800; font-size: 18px;">Total</span>
+                                                        </p>
+
+                                                    </td>
+                                                </tr>
+                                           </table>
+                                           <table role="presentation" width="100px" align="right" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="width: 100px">
+                                            <tr>
+                                                <td align="center" valign="top" style="padding: 0; padding-right: 20px;">
+                                                    <p style="color: #000000; font-size: 16px; line-height: 22px; text-align: left; margin: 0; font-weight: 600; text-align: right;">
+                                                        $59.00 <br>
+                                                        $0.00 <br>
+                                                        $3.54 <br>
+                                                        <span style="font-weight: 800; font-size: 18px;">$62.54 </span>
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                    <!-- /Sub Total Row -->
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Order Summary <<==========  -->
 
                     <!-- ==========>> /Email Container <<==========  -->
                 </td>
