--- a/index.html
+++ b/index.html
@@ -448,11 +448,11 @@
 
                         <!-- ==========>> Start of Order Summary <<==========  -->
                         <tr>
-                            <td align="center" valign="top" style="padding: 0;">
-                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-top: 1px solid #cccccc;">
+                            <td align="center" valign="top" style="padding: 0; padding-bottom: 60px;">
+                                <table class="order" role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-top: 1px solid #cccccc;">
                                     <tr>
                                         <td align="center" valign="top" style="padding: 40px 0 0 0;">
-                                           <table role="presentation" width="500px" align="left" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="width: 500px">
+                                           <table class="order-summary" role="presentation" width="80%" align="left" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="width: 80%; max-width: 100%;">
                                                 <tr>
                                                     <td align="center" valign="top" style="padding: 0; padding-left: 220px;">
                                                         <p style="color: #000000; font-size: 16px; line-height: 22px; text-align: left; margin: 0; font-weight: 600; text-align: left;">
@@ -465,7 +465,7 @@
                                                     </td>
                                                 </tr>
                                            </table>
-                                           <table role="presentation" width="100px" align="right" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="width: 100px">
+                                           <table class="order-cost" role="presentation" width="20%" align="right" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="width: 20%; max-width: 100%;">
                                             <tr>
                                                 <td align="center" valign="top" style="padding: 0; padding-right: 20px;">
                                                     <p style="color: #000000; font-size: 16px; line-height: 22px; text-align: left; margin: 0; font-weight: 600; text-align: right;">
@@ -484,6 +484,38 @@
                             </td>
                         </tr>
                         <!-- ==========>> End of Order Summary <<==========  -->
+
+                        <!-- ==========>> Start of Order Status Button <<==========  -->
+                        <tr>
+                            <td align="center" valign="top" style="padding: 40px 0 60px 0;">
+                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 0;">
+                                            <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                                <tr>
+                                                    <td align="center" valign="top" style="padding: 0;">
+                                                        <a href="#" style="text-decoration: none; margin: 0; padding: 12px 45px 12px 45px; border-radius: 29px ;font-size: 16px; line-height: 22px ;font-weight: 800; text-align: center; background-color: #000000; color: #ffffff; display: inline-block;">
+                                                           Order Status
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Order Status Button  <<==========  -->
+
+                        <!-- ==========>> Start of Order Help Center <<==========  -->
+                        <tr>
+                            <td align="center" valign="top" style="padding: 0;">
+                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Order Help Center <<==========  -->
 
                     <!-- ==========>> /Email Container <<==========  -->
                 </td>
