--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                                            <table class="order-summary" role="presentation" width="80%" align="left" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="width: 80%; max-width: 100%;">
                                                 <tr>
                                                     <td align="center" valign="top" style="padding: 0; padding-left: 220px;">
-                                                        <p style="color: #000000; font-size: 16px; line-height: 22px; text-align: left; margin: 0; font-weight: 600; text-align: left;">
+                                                        <p style="color: #000000; font-size: 16px; line-height: 22px; text-align: left; margin: 0; font-weight: 600;">
                                                             Subtotal<br>
                                                             Shipping<br>
                                                             Estimated Tax <br>
@@ -468,7 +468,7 @@
                                            <table class="order-cost" role="presentation" width="20%" align="right" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="width: 20%; max-width: 100%;">
                                             <tr>
                                                 <td align="center" valign="top" style="padding: 0; padding-right: 20px;">
-                                                    <p style="color: #000000; font-size: 16px; line-height: 22px; text-align: left; margin: 0; font-weight: 600; text-align: right;">
+                                                    <p style="color: #000000; font-size: 16px; line-height: 22px; margin: 0; font-weight: 600; text-align: right;">
                                                         $59.00 <br>
                                                         $0.00 <br>
                                                         $3.54 <br>
@@ -509,9 +509,33 @@
 
                         <!-- ==========>> Start of Order Help Center <<==========  -->
                         <tr>
-                            <td align="center" valign="top" style="padding: 0;">
+                            <td class="help-center-wrapper" align="center" valign="top" style="padding: 0 95px 60px 95px;">
                                 <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
-                                    
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 0;">
+                                            <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                                <!-- Top Row -->
+                                                <tr>
+                                                    <td align="center" valign="top" style="padding: 0; padding-bottom: 30px;">
+                                                        <p style="color: #000000; font-size: 16px; line-height: 26px; text-align: center; margin: 0; font-weight: 600;">
+                                                            Items from your order may ship from different locations and use different shipping methods. See <a href="#" style="text-decoration: none; color: #EF4923;">Changes, Shipments and Payments</a> for more information about authorizations and charges.
+                                                        </p>
+                                                    </td>
+                                                </tr>
+                                                <!-- /Top Row -->
+
+                                                <!-- Bottom Row -->
+                                                <tr>
+                                                    <td align="center" valign="top" style="padding: 0;">
+                                                        <p style="color: #000000; font-size: 16px; line-height: 26px; text-align: center; margin: 0; font-weight: 600;">
+                                                            Have a question? We can help. Visit our <a href="#" style="text-decoration: none; color: #EF4923;">Help Center</a> for answers and assistance. Please include your order number (<a href="#" style="text-decoration: none; color: #EF4923;">US65005000</a>) in all correspondence.
+                                                        </p>
+                                                    </td>
+                                                </tr>
+                                                <!-- /Bottom Row -->
+                                            </table>
+                                        </td>
+                                    </tr>
                                 </table>
                             </td>
                         </tr>
