Add Learn More Section

--- a/index.html
+++ b/index.html
@@ -541,6 +541,107 @@
                         </tr>
                         <!-- ==========>> End of Order Help Center <<==========  -->
 
+                        <!-- ==========>> Start of Learn More Table <<==========  -->
+                        <tr>
+                            <td class="learn-more-wrapper" align="center" valign="top" style="padding: 40px 0 60px 0; ">
+                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="background-color: #F5F5F5;">
+                                    <tr>
+                                        <td class="padding" align="center" valign="top" style="padding: 20px 0 20px 0">
+                                            <table class="three-columns" role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                                <tr>
+                                                    <!-- Left Column -->
+                                                    <td class="column" align="center" valign="top" width="33.33%" style="padding: 0"> 
+                                                        <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                                            <tr>
+                                                                <td align="center" valign="top" style="padding: 20px 0 10px 0">
+                                                                    <h3 style="font-size: 22px; line-height: 32px; font-weight: 800; text-align: center ;color: #000000; margin: 0;">Ironclad <br> Guarantee</h3>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center" valign="top" style="padding: 10px 0 10px 0">
+                                                                    <p style="color: #000000; font-size: 16px; line-height: 26px; text-align: center; margin: 0; font-weight: 600;">
+                                                                        We guarantee <br> everything we make.
+                                                                    </p>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center" valign="top" style="padding: 10px 0 10px 0">
+                                                                    <a href="#" style="text-decoration: none;">
+                                                                        <p style="color: #EF4923; font-size: 16px; line-height: 26px; text-align: center; margin: 0; font-weight: 800;">
+                                                                            Learn More
+                                                                        </p>
+                                                                    </a>
+                                                                </td>
+                                                            </tr>
+                                                        </table>
+                                                    </td>
+                                                    <!-- /Left Column -->
+
+                                                    <!-- Middle Column -->
+                                                    <td class="column" align="center" valign="top" width="33.33%" style="padding: 0"> 
+                                                        <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                                            <tr>
+                                                                <td align="center" valign="top" style="padding: 20px 0 10px 0">
+                                                                    <h3 style="font-size: 22px; line-height: 32px; font-weight: 800; text-align: center ;color: #000000; margin: 0;">1% for <br> the Planet</h3>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center" valign="top" style="padding: 10px 0 10px 0">
+                                                                    <p style="color: #000000; font-size: 16px; line-height: 26px; text-align: center; margin: 0; font-weight: 600;">
+                                                                        We donate a portion <br> of your purchase.
+                                                                    </p>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center" valign="top" style="padding: 10px 0 10px 0">
+                                                                    <a href="#" style="text-decoration: none;">
+                                                                        <p style="color: #EF4923; font-size: 16px; line-height: 26px; text-align: center; margin: 0; font-weight: 800;">
+                                                                            Learn More
+                                                                        </p>
+                                                                    </a>
+                                                                </td>
+                                                            </tr>
+                                                        </table>
+                                                    </td>
+                                                    <!-- /Middle Column -->
+
+                                                    <!-- Right Column -->
+                                                    <td class="column" align="center" valign="top" width="33.33%" style="padding: 0"> 
+                                                        <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                                            <tr>
+                                                                <td align="center" valign="top" style="padding: 20px 0 10px 0">
+                                                                    <h3 style="font-size: 22px; line-height: 32px; font-weight: 800; text-align: center ;color: #000000; margin: 0;">
+                                                                    Care <br> & Repair</h3>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center" valign="top" style="padding: 10px 0 10px 0">
+                                                                    <p style="color: #000000; font-size: 16px; line-height: 26px; text-align: center; margin: 0; font-weight: 600;">
+                                                                        Keep your <br> gear in play.
+                                                                    </p>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center" valign="top" style="padding: 10px 0 10px 0">
+                                                                    <a href="#" style="text-decoration: none;">
+                                                                        <p style="color: #EF4923; font-size: 16px; line-height: 26px; text-align: center; margin: 0; font-weight: 800;">
+                                                                            Learn More
+                                                                        </p>
+                                                                    </a>
+                                                                </td>
+                                                            </tr>
+                                                        </table>
+                                                    </td>
+                                                    <!-- /Right Column -->
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Learn More Table <<==========  -->
+
                     <!-- ==========>> /Email Container <<==========  -->
                 </td>
             </tr>
