--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 
                         <!-- ==========>> Start of Learn More Table <<==========  -->
                         <tr>
-                            <td class="learn-more-wrapper" align="center" valign="top" style="padding: 40px 0 60px 0; ">
+                            <td class="learn-more-wrapper" align="center" valign="top" style="padding: 40px 0 80px 0; ">
                                 <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="background-color: #F5F5F5;">
                                     <tr>
                                         <td class="padding" align="center" valign="top" style="padding: 20px 0 20px 0">
@@ -641,6 +641,102 @@
                             </td>
                         </tr>
                         <!-- ==========>> End of Learn More Table <<==========  -->
+
+                        <!-- ==========>> Start of Photo Description <<==========  -->
+                        <tr>
+                            <td align="center" valign="top" style="padding: 0 40px 120px 40px">
+                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 0">
+                                            <p style="color: #777777; font-size: 14px; line-height: 24px; text-align: center; margin: 0; font-weight: 600; text-align: center;">
+                                                Photo: Brittany Griffith soars up a newly established route in Tannourine,
+                                                Lebanon. BAILEY SPEED 
+                                            </p>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Photo Description <<==========  -->
+
+                         <!-- ==========>> Start of Take Action <<==========  -->
+                         <tr>
+                            <td align="center" valign="top" style="padding: 0">
+                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 0">
+                                            <a href="#" style="text-decoration: none;">
+                                                <p style="color: #000; font-size: 16px; line-height: 24px; text-align: center; margin: 0; font-weight: 800; text-align: center;">
+                                                   Sign up. Show up. Take action.
+                                                </p>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 20px 10px 60px 10px; font-size: 0; background-color: #ffffff; width: 100%;" width="100%">
+                                            <a href="#" style="text-decoration: none;">
+                                                <img src="img/patagonia-footer_media.png" alt="Take Action" style="width: 300px; height: 26px;">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Take Action <<==========  -->
+
+                         <!-- ==========>> Start of Patagonia, Inc <<==========  -->
+                         <tr>
+                            <td align="center" valign="top" style="padding: 0">
+                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 10px 0 0 0">
+                                            <p style="color: #000000; font-size: 15px; line-height: 20px; text-align: center; margin: 0; font-weight: 800; text-align: center;">
+                                                Patagonia, Inc. 
+                                            </p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 10px 0 25px 0; font-size: 0; background-color: #ffffff; width: 100%;" width="100%">
+                                            <p style="color: #333333; font-size: 14px; line-height: 20px; text-align: center; margin: 0; font-weight: 600; text-align: center;">
+                                                8550 White Fir St., Reno, NV 89523 | <a href="#" style="text-decoration: underline; color: #333333;">Help Center</a>
+                                            </p>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Patagonia, Inc <<==========  -->
+
+                        <!-- ==========>> Divider <<==========  -->
+                        <tr>
+                            <td align="center" valign="top" style="padding: 0">
+                                <table role="presentation" width="50" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 5px 0 5px 0; border-top: 1px solid #999999;">
+                                        </td>
+                                    </tr>
+
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> Dividder <<==========  -->  
+
+                        <!-- ==========>> Start of Email Address <<==========  -->
+                        <tr>
+                            <td align="center" valign="top" style="padding: 30px 20px 30px 20px">
+                                <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td align="center" valign="top" style="padding: 0">
+                                            <p style="color: #777777; font-size: 13px; line-height: 20px; margin: 0; font-weight: 600; text-align: justify;">
+                                                This email was sent to <a href="#" style="text-decoration: none; color: #000000;">hello@SmilesDavis.yeah</a> . <br>
+                                                © 2020 Patagonia
+                                            </p>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ==========>> End of Email Address <<==========  -->
 
                     <!-- ==========>> /Email Container <<==========  -->
                 </td>
